# few-shot-segmenter

./: .gitignore  README.md  dev.ipynb  dev_deeplab.ipynb  few_shot_segmentation.ipynb  pyproject.toml  segment.py  segment_deeplabv3.py  setup.py  train.py
conf/: segment.yaml  train.yaml
conf/annotator/: deeplabv3.yaml  default.yaml
conf/callbacks/: default.yaml
conf/datamodule/: deeplabv3.yaml  default.yaml
conf/logger/: wandb.yaml
conf/model/: deeplabv3.yaml  default.yaml
conf/trainer/: default.yaml
demo_data/evaluation/support_set/cauliflower/annotation/: 1.tiff  2.tiff  3.tiff
demo_data/evaluation/support_set/cauliflower/image/: 1.tiff  2.tiff  3.tiff
demo_data/evaluation/support_set/framboid/annotation/: 1.tiff  2.tiff  3.tiff
demo_data/evaluation/support_set/framboid/image/: 1.tiff  2.tiff  3.tiff
demo_data/evaluation/support_set/plaquette/annotation/: 1.tiff  2.tiff  3.tiff
demo_data/evaluation/support_set/plaquette/image/: 1.tiff  2.tiff  3.tiff
sav/: __init__.py  datamodule.py
sav/module/: __init__.py  base_module.py  fs_segmenter.py  hsnet_segmenter.py  loss.py
sav/module/hsnet/: hsnet.py  learner.py
sav/utils/: __init__.py  annotator.py  hydra_logging.py  preprocess.py  random_forest.py  utils.py  visual.py
