[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "few-shot-segmenter"
version = "0.0.1"
description = "Few-shot leaning model for 3D tomographic microstructure segmentaion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Po-Yen Tung", email = "pyt21@cam.ac.uk"}
]
keywords = [
    "few-shot learning",
    "3D electron microscopy",
    "scanning electron microscopy",
    "segmentation",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering", "Electron microscopy", "3D imaging", "segmentation"
]
dependencies = [
    "scipy",
    "notebook",
    "ipywidgets",
    "jupyterlab",
    "torch==2.0.0",
    "torchmetrics==0.10.3",
    "torchvision==0.15.1",
    "pytorch-lightning==1.6.0",
    "rich==12.6.0",
    "hydra-core==1.2.0",
    "hydra-colorlog==1.2.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.1.3",
    "numpy==1.23.5",
    "numba==0.56.4",
    "matplotlib==3.6.2",
    "seaborn==0.12.1",
    "wandb==0.13.5",
]

[project.urls]
"Homepage" = "https://github.com/poyentung/few-shot-segmenter"
